--- a/javascript/apis/document-manipulation/shopping-list.html
+++ b/javascript/apis/document-manipulation/shopping-list.html
@@ -31,6 +31,17 @@
     </ul>
 
     <script>
+      const list=document.querySelector("ul")
+      const button=document.querySelector("button")
+      const input=document.querySelector("input")
+
+      object.addEventListener("click", myScript);
+
+      function myScript() {
+        let inputValue=document.getElementById("item").value;
+        inputValue="";
+
+      }
 
     </script>
   </body>
