--- a/javascript/apis/document-manipulation/dom-example.html
+++ b/javascript/apis/document-manipulation/dom-example.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple DOM example</title>
-  </head>
-  <body>
-      <section>
-        <img src="dinosaur.png" alt="A red Tyrannosaurus Rex: A two legged dinosaur standing upright like a human, with small arms, and a large head with lots of sharp teeth.">
-        <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
-      </section>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple DOM example</title>
+</head>
+
+<body>
+  <section>
+    <img src="dinosaur.png"
+      alt="A red Tyrannosaurus Rex: A two legged dinosaur standing upright like a human, with small arms, and a large head with lots of sharp teeth.">
+    <p>Here we will add a link to the <a href="https://www.mozilla.org/">Mozilla homepage</a></p>
+  </section>
+  <script>
+    //changing the link and its name
+    const link = document.querySelector("a");
+    link.textContent = "Mozilla Developer Network";
+    link.href = "https://developer.mozilla.org";
+
+    //creating a new paragraph and appending it to 'section'
+    const sect = document.querySelector("section");
+    const para = document.createElement("p");
+    para.textContent = "We hope you enjoyed the ride.";
+    sect.appendChild(para);
+
+    //creating a text node, appending it right after the link
+    const text = document.createTextNode(
+      " — the premier source for web development knowledge.",
+    );
+    const linkPara = document.querySelector("p");
+    linkPara.appendChild(text);
+
+    //move paragraph containing link to the bottom
+    sect.appendChild(linkPara);
+
+    //removing paragraph containing the link, 2 methods:
+    //sect.removeChild(linkPara);
+    //linkPara.remove();
+  </script>
+</body>
+
 </html>
